--- a/css/calendar.css
+++ b/css/calendar.css
@@ -29,9 +29,11 @@
 }
 .time-date > .display > .content > .super-title {
   text-transform: uppercase;
+  padding-bottom: 2em;
 }
 .time-date > .display > .content > .main-title {
   font-size: 8rem;
+  padding-bottom: .5em;
 }
 .time-date > .display > .content > .main-title > small {
   font-size: 1.5rem;
@@ -115,11 +117,11 @@
 .time-date > .control > .slider > .date-control .day-cell {
   float: left;
   width: 3.6rem;
-  height: 3.6rem;
+  height: 3.2rem;
   padding-top: 1rem;
   cursor: pointer;
-  -webkit-border-radius: 4rem;
-  border-radius: 4rem;
+  -webkit-border-radius: 6rem;
+  border-radius: 6rem;
 }
 .time-date > .control > .slider > .date-control > .days {
   font-size: 1.3rem;
@@ -179,8 +181,8 @@
   content: " ";
   background-color: #eceff1;
   position: absolute;
-  top: -20px;
-  left: -20px;
+  top: -25px;
+  left: -25px;
   height: 188px;
   width: 188px;
   -webkit-border-radius: 94px;
@@ -199,14 +201,14 @@
 }
 .time-date > .control > .slider > .time-control > .clock > .clock-face > .hand {
   position: absolute;
-  height: 4rem;
-  width: 4rem;
-  margin-left: -2rem;
-  margin-top: -2rem;
-  padding: 1rem;
+  height: 2em;
+  width: 2em;
+  margin-left: -1.9em;
+  margin-top: -1.8em;
+  padding: .5em;
   text-align: center;
-  -webkit-border-radius: 8rem;
-  border-radius: 8rem;
+  -webkit-border-radius: 8em;
+  border-radius: 8em;
   cursor: pointer;
   color: #009688;
   z-index: 2;
