--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ section{
 .centered{
     text-align:center;
 }
+.buttons{
+    text-align-last: center;
+    margin: 0 auto;
+}
 
 /* Login/Register field styling */
 .login-register{
@@ -85,42 +89,38 @@ section{
     color: #4ECDC4;
     transition: color 0.5s ease;
 }
+.text-left{
+    text-align: left;
+    float:left;
+}
 
-/* Timetable Styling */
-
-.timetable tr td.available, .timetable tr td.unavailable{
-    border-right: 1px solid #000;
+/* Booking Manager Styling */
+.room {
+    position: relative;
+    right:0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
-.timetable tr td.unavailable{
-    background-color:red;
-}
-.timetable tr td.available{
-    background-color:green;
-}
-.timetable a{
-    padding:0;
-}
-.timetable a:hover{
-    background-color: rgba(255,255,255,0.5);
-}
-.timetable a.selected{
-    background-color: #fff rgba(255,255,255,0.5);
-    display:block;
+.room .photo{
+    background: url('../images/1stfloor.jpg') 100% 100% / contain no-repeat;
+    display: block;
     width:100%;
-    height:100%;
-    padding:0;
-    /* Hides text offscren */
-    text-indent: -9999;
-    
+    height:350px;
+    margin:0;
+    padding: 0;
+    position: relative;
+    z-index: 10;
 }
-.icon-available{
-    border-left:2em solid green;
-    padding-left: 1em;
+.room::before{
+    content: 'If you are seeing this, please contact an administrator, an image should have appeared';
+    margin-left: calc(100% - 149%);
+    width:100%;
+    position: absolute;
+    top: 40%;
+    z-index: 1;
 }
-.icon-unavailable{
-    border-left:2em solid red;
-    padding-left: 1em;
-}
+
 .align-centered{
     text-align: center;
     margin: 0 auto;
