--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -197,30 +197,94 @@
 		margin-bottom: .2em;
 		border-bottom: 1px solid #F39C12;
 	}
+	.panels {
+		margin-top: 4%;
+		background-color: rgba(0,0,0,0.3);
+		border-radius: 5px;
+		border: 1px solid rgba(255,255,255,.45);
+		padding: 1em;
+		display: relative;
+		z-index: 2;
+	}
+	.panels p{
+		color: rgba(255,255,255,0.9);
+		text-shadow: 1px 1px #000;
+	}
+	.panels h4{
+		color:#fff;
+		text-shadow: 1px 1px #000;
+	}
+	.panels a{
+		text-shadow: 1px 1px #000;
+	}
 	.panel .inner{
 		padding: 2em;
+	}
+	.centering-middle {
+		margin: 0 auto;
+		
 	}
 	
 	/* Promo ==================================== */
 	
 	.promo {
-		background: #6C7A89 url(../images/bg3.jpg);	
+		background: #6C7A89 url('../../images/rooms/Theatre-3-1.jpg') 100% 60% / cover no-repeat;	
 		margin-bottom:-1px;
+		height:250px;
+	}
+	.headerBg {
+		background: #6C7A89 url('../../images/rooms/3.02-3.jpg') 100% 40% / cover no-repeat;	
+		margin-bottom:-1px;
+	}
+	.overlay{
+		position: relative;
+		z-index: 5;
+	}
+	
+	.fadedark::before{
+		background-color: rgba(108, 122, 137,0.4);
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		left: 0;
+		content: '';
+		z-index: 1;
+		width:100%;
+		height: 350px;
+	}	
+	.fadelight::before{
+		background-color: rgba(255,255,255,0.4);
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		left: 0;
+		content: '';
+		z-index: 1;
+		width:100%;
+		height: 350px;
 	}
 	
 	.promo .intro { 
 		max-width:50em;
 		margin:0 auto 5em;
-		color:#fff;
+		text-shadow: 1px 1px #000;
+		position: relative;
+		z-index: 5;
 	}
 	
+	
 	.promo .intro h3 { 
-		color:#fff;	
+		color:#fff;
+		font-size: 2.2em;
+		font-weight: 500;
 	}
 	
 	.promo .intro p { 
-		color:#fff;	
-		color:rgba(255,255,255,0.7);
+		color:#fff;
+		font-size: .8em;
+		font-weight: 400;
 	}
 	.sm-show {
 		display: none;
