--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,9 @@ section{
     text-align: left;
     float:left;
 }
-
+header{
+    padding-right: 200px;
+}
 /* Booking Manager Styling */
 .room {
     position: relative;
@@ -99,6 +101,7 @@ section{
     margin: 0 auto;
 }
 table th:hover{
-    background-color: rgba(0,0,0,.5);
+    background-color: rgba(0,0,0,.1);
+    transition: all ease 1s;
 }
 /* View bookings styling */
